Fix login message alignment
Fixes https://github.com/CanonicalLtd/candid/issues/39

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -624,6 +624,10 @@ textarea {
   padding: 10px;
 }
 
+.login .button-row {
+  padding: 10px 20px;
+}
+
 .button--neutral,
 .button--inline-neutral,
 .entity-content .btn__see--more,
